--- a/theme/Barracks/admin/ui/cocker-dark/admin.css
+++ b/theme/Barracks/admin/ui/cocker-dark/admin.css
@@ -74,8 +74,8 @@
 }
 html,
 body {
-  background: #f2f2f2;
-  color: #444444;
+  background: #f4f6fa;
+  color: #676a6c;
   height: 100%;
   margin: 0px;
   padding: 0px;
@@ -84,7 +84,7 @@ body {
   font-size: 12px;
 }
 a {
-  color: #444444;
+  color: #676a6c;
   text-decoration: none;
 }
 a:hover {
@@ -129,7 +129,7 @@ a:hover {
 .modal-log-info-wrap .ax-loginfo li.account {
   display: block;
   float: left;
-  color: #444444;
+  color: #676a6c;
   font-weight: bold;
   padding: 0px 10px;
 }
@@ -211,16 +211,17 @@ a:hover {
 }
 #AXPage .ax-header {
   z-index: 300;
-  border-bottom: 1px solid #d9d9d9;
-  height: 60px;
+  border-top: 3px solid #19AA8D;
+  height: 57px;
   position: fixed;
   width: 100%;
-  background: #ffffff;
+  background-image: url(images/header-skin-1.png);
+  background-color: #3E495F;
   opacity: 0.95;
 }
 #AXPage .ax-header .ax-logo {
   position: absolute;
-  margin-top: 8px;
+  margin-top: 5px;
   z-index: 1;
   display: block;
 }
@@ -238,7 +239,7 @@ a:hover {
   vertical-align: middle;
 }
 #AXPage .ax-header .ax-logo a .logo-img i.axi {
-  color: #468ec8;
+  color: #f3f3f3;
   font-size: 35px;
   line-height: 45px;
 }
@@ -246,7 +247,7 @@ a:hover {
   display: block;
   float: left;
   padding: 0px 5px;
-  color: #a6a6a6;
+  color: #9EA6B9;
   vertical-align: middle;
   text-decoration: none;
   font-size: 14px;
@@ -255,7 +256,7 @@ a:hover {
 }
 #AXPage .ax-header .ax-top-menu {
   padding-left: 200px;
-  height: 60px;
+  height: 57px;
   width: 600px;
 }
 #AXPage .ax-header .ax-top-menu ul {
@@ -266,10 +267,11 @@ a:hover {
 #AXPage .ax-header .ax-top-menu ul li {
   float: left;
   font-size: 14px;
-  line-height: 60px;
+  line-height: 57px;
 }
 #AXPage .ax-header .ax-top-menu ul li a {
   padding: 0px 10px;
+  color: #9EA6B9;
 }
 #AXPage .ax-header .ax-top-menu .varrow1 {
   position: absolute;
@@ -301,13 +303,13 @@ a:hover {
   font-weight: bold;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .parentMenu a:hover {
-  color: skyblue;
+  color: #fff;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .parentMenu a:focus {
-  color: skyblue;
+  color: #fff;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .parentMenu a.on {
-  color: skyblue;
+  color: #fff;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .childMenu {
   position: absolute;
@@ -342,12 +344,15 @@ a:hover {
   border-radius: 3px;
   text-decoration: none;
   white-space: nowrap;
+  color: #444;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .childMenu ul li a:hover {
   background: #eee;
+  color: #19AA8D;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .childMenu ul li a.on {
   background: #eee;
+  color: #19AA8D;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .childMenu ul li a.expand {
   background-image: url(images/rightArrows.png);
@@ -379,12 +384,15 @@ a:hover {
   border-bottom: 1px solid #ebebeb;
 }
 #AXPage .ax-header .ax-loginfo {
-  height: 60px;
-  line-height: 60px;
+  height: 57px;
+  line-height: 57px;
   list-style: none;
   margin: 0px;
   padding: 0px;
   float: right;
+}
+#AXPage .ax-header .ax-loginfo a {
+  color: #9EA6B9;
 }
 #AXPage .ax-header .ax-loginfo li {
   display: inline;
@@ -404,12 +412,17 @@ a:hover {
   margin-top: 10px;
 }
 #AXPage .ax-header .ax-loginfo li.account {
-  color: #444444;
+  color: #9EA6B9;
   font-weight: bold;
   padding: 0px 10px;
 }
 #AXPage .ax-header .ax-loginfo li.lang {
   padding: 0px 20px;
+}
+#AXPage .ax-header .ax-loginfo li.btns a {
+  background: #1AB394;
+  border: 1px solid #1AB394;
+  color: #fff;
 }
 #AXPage .ax-body {
   z-index: 100;
@@ -428,7 +441,7 @@ a:hover {
   float: left;
   font-size: 24px;
   font-weight: normal;
-  color: #444444;
+  color: #676a6c;
   text-align: center;
   margin: 0px;
   padding: 0px;
@@ -438,7 +451,7 @@ a:hover {
   height: 30px;
   line-height: 30px;
   float: left;
-  color: #444444;
+  color: #676a6c;
   text-align: center;
   margin: 0px 0px 0px 10px;
   padding: 0px;
@@ -465,7 +478,7 @@ a:hover {
   position: relative;
   display: block;
   font-size: 20px;
-  color: #444444;
+  color: #676a6c;
   font-weight: normal;
   margin: 10px 0px;
   padding: 0px 0px;
@@ -476,7 +489,7 @@ a:hover {
 }
 #AXPage .ax-body .ax-box h2 {
   font-size: 16px;
-  color: #444444;
+  color: #676a6c;
   font-weight: normal;
   margin: 15px 10px 10px 10px;
   padding: 0px 0px;
@@ -487,7 +500,7 @@ a:hover {
 }
 #AXPage .ax-body .ax-box h3 {
   font-size: 14px;
-  color: #444444;
+  color: #676a6c;
   font-weight: normal;
   margin: 15px 10px 10px 10px;
   padding: 0px 0px;
@@ -499,7 +512,7 @@ a:hover {
 #AXPage .ax-body .ax-box p {
   font-size: 12px;
   line-height: 1.6em;
-  color: #444444;
+  color: #676a6c;
   font-weight: normal;
   margin: 10px 0px;
   padding: 0px;
@@ -580,7 +593,7 @@ a:hover {
   -moz-border-radius: 36px 36px 36px 36px;
   border-radius: 36px 36px 36px 36px;
   line-height: 36px;
-  background: #858585;
+  background: #1AB394;
   color: #ffffff;
   margin-left: 10px;
   text-align: center;
@@ -605,6 +618,17 @@ a:hover {
 #AXPage .ax-aside .ax-aside-menu-box .ax-aside-menu.on .axi-angle-double-left {
   display: none;
 }
+#AXPage .ax-aside .ax-aside-box i.axi {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  line-height: 22px;
+  text-align: center;
+  background: #19AA8D;
+  color: #fff;
+  border-radius: 50%;
+  margin-right: 5px;
+}
 #AXPage .ax-aside .ax-aside-box .ax-box {
   width: 100%;
   background: #ffffff;
@@ -620,7 +644,7 @@ a:hover {
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h1 {
   font-size: 24px;
-  color: #444444;
+  color: #676a6c;
   font-weight: normal;
   margin: 10px 0px;
   padding: 0px 0px;
@@ -628,7 +652,7 @@ a:hover {
 #AXPage .ax-aside .ax-aside-box .ax-box p {
   font-size: 12px;
   line-height: 1.6em;
-  color: #444444;
+  color: #676a6c;
   font-weight: normal;
   margin: 10px 0px;
   padding: 0px;
@@ -658,9 +682,12 @@ a:hover {
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h3 {
   font-size: 14px;
-  color: #444444;
+  color: #676a6c;
   font-weight: normal;
   text-align: center;
+  margin: 0px;
+  padding: 14px 0px;
+  background: #EFEFEF;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h3 a {
   margin: 0px 5px;
@@ -687,8 +714,8 @@ a:hover {
 }
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li a:hover,
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li a:focus {
-  background: #468ec8;
-  color: #ffffff;
+  background: #EFEFEF;
+  color: #19AA8D;
 }
 #AXPage .ax-footer {
   z-index: 200;
@@ -698,7 +725,7 @@ a:hover {
   bottom: 0px;
   line-height: 40px;
   border-top: 1px solid #d9d9d9;
-  background: #ffffff;
+  background: #EFEFEF;
 }
 #AXPage .ax-footer .ax-version {
   list-style: none;
@@ -731,7 +758,7 @@ a:hover {
   float: none;
   font-size: 24px;
   font-weight: normal;
-  color: #444444;
+  color: #676a6c;
   text-align: center;
   margin: 0px;
   padding: 0px;
@@ -742,7 +769,7 @@ a:hover {
   height: 30px;
   line-height: 30px;
   float: none;
-  color: #444444;
+  color: #676a6c;
   text-align: center;
   margin: 0px 0px 0px 10px;
   padding: 0px;
@@ -753,7 +780,7 @@ a:hover {
 }
 #AXPage.login .ax-box h1 {
   text-align: center;
-  color: #444444;
+  color: #676a6c;
   font-weight: normal;
 }
 #AXPage.login .ax-box p {
@@ -811,7 +838,7 @@ a:hover {
   float: none;
   font-size: 20px;
   font-weight: normal;
-  color: #444444;
+  color: #676a6c;
   text-align: center;
   margin: 0px;
   padding: 0px;
@@ -822,7 +849,7 @@ a:hover {
   height: 16px;
   line-height: 16px;
   float: none;
-  color: #444444;
+  color: #676a6c;
   text-align: center;
   margin: 0px 0px 0px 0px;
   padding: 0px;
@@ -839,7 +866,7 @@ a:hover {
   float: none;
   font-size: 16px;
   font-weight: normal;
-  color: #444444;
+  color: #676a6c;
   text-align: left;
   margin: 0px;
   padding: 0px;
@@ -849,7 +876,7 @@ a:hover {
   height: 16px;
   line-height: 16px;
   float: none;
-  color: #444444;
+  color: #676a6c;
   text-align: center;
   margin: 0px 0px 0px 0px;
   padding: 0px;
@@ -1176,7 +1203,7 @@ table.ax-layout.padding20 {
   border-spacing: 20px;
   border-collapse: separate;
 }
-@media only screen and (min-width: 767px) and (max-width: 1024px) {
+@media only screen and (min-width: 767px) and (max-width: 1023px) {
   #AXPage .ax-wrap {
     margin: 0px auto;
   }
@@ -1279,7 +1306,7 @@ table.ax-layout.padding20 {
     clear: both;
   }
   #AXPage .ax-unit {
-    margin: 0px 3px;
+    margin: 0px 0px;
   }
   #AXPage .ax-col {
     float: left;
@@ -1358,7 +1385,7 @@ table.ax-layout.padding20 {
     float: left;
     line-height: 60px;
     padding-left: 10px;
-    padding-top: 5px;
+    padding-top: 3px;
   }
   #AXPage .ax-header .ax-loginfo {
     display: none;
@@ -1369,6 +1396,7 @@ table.ax-layout.padding20 {
     padding-right: 10px;
   }
   #AXPage .ax-header .mx-menu-button {
+    color: #9EA6B9;
     font-size: 30px;
   }
   #AXPage .ax-header .mx-menu-button#mx-aside-menu-handle {
@@ -1376,7 +1404,7 @@ table.ax-layout.padding20 {
   }
   #AXPage .ax-header .mx-menu-button:hover,
   #AXPage .ax-header .mx-menu-button:focus {
-    color: #468ec8;
+    color: #fff;
   }
   #AXPage .ax-body .ax-title {
     height: 50px;
@@ -1390,7 +1418,7 @@ table.ax-layout.padding20 {
     float: none;
     font-size: 24px;
     font-weight: normal;
-    color: #444444;
+    color: #676a6c;
     text-align: center;
     margin: 0px;
     padding: 0px;
@@ -1400,7 +1428,7 @@ table.ax-layout.padding20 {
     height: 20px;
     line-height: 20px;
     float: none;
-    color: #444444;
+    color: #676a6c;
     text-align: center;
     margin: 0px 0px 0px 0px;
     padding: 0px;
@@ -1412,6 +1440,10 @@ table.ax-layout.padding20 {
     padding-left: 0px;
   }
   #AXPage .ax-body .ax-box {
+    border-radius: 0px;
+    border: 0px none;
+    border-top: 3px solid #E7EAEC;
+    border-bottom: 1px solid #E7EAEC;
     /* 페이지 검색바 */
     /* 페이지 버튼그룹 */
     /* 페이지 그리드 */
@@ -1469,7 +1501,7 @@ table.ax-layout.padding20 {
     float: none;
     font-size: 20px;
     font-weight: normal;
-    color: #444444;
+    color: #676a6c;
     text-align: center;
     margin: 0px;
     padding: 0px;
@@ -1479,7 +1511,7 @@ table.ax-layout.padding20 {
     height: 16px;
     line-height: 16px;
     float: none;
-    color: #444444;
+    color: #676a6c;
     text-align: center;
     margin: 0px 0px 0px 0px;
     padding: 0px;
