--- a/theme/Barracks/admin/ui/custom.less
+++ b/theme/Barracks/admin/ui/custom.less
@@ -9,6 +9,16 @@
 		.nowrap();
 	}
 }
+.AXFormTable{
+	td{
+		padding: 5px;
+		line-height: 20px;
+		//.nowrap();
+	}
+}
+.AXInputLabel{
+	span{line-height:1.5em;}
+}
 
 #AXPage {
 	&.login {
@@ -28,7 +38,7 @@
 				padding: 0px;
 				i.axi{
 					font-size: 50px;
-					color: #468cca;
+					//color: #468cca;
 				}
 			}
 			.desc {
