--- a/theme/Barracks/admin/ui/cocker-dark-red/admin.less
+++ b/theme/Barracks/admin/ui/cocker-dark-red/admin.less
@@ -9,13 +9,13 @@
 
 // Global Preset //////////////////
 @color		:#a6a6a6; 		//Light Gray
-@color-a	:#444;			//Dark Gray
+@color-a	:#676A6C;			//Dark Gray
 @color-b	:#468ec8; 		//Blue
 @color-c	:#ff6f64;		//Caution
 @color-d	:#fff;			//White
 
 @bgcolor	:#fff;			//White
-@bgcolor-a	:#f2f2f2;		//Light Gray
+@bgcolor-a	:#F4F6FA;		//Light Gray
 @bgcolor-b	:#444;			//Dark Gray
 @bgcolor-c	:#858585; 		//Middle Gray
 @bgcolor-d	:#468ec8;		//Blue 
@@ -27,7 +27,7 @@
 
 @wide:		~"(min-width:1151px)";
 @desktop:   ~"only screen and (min-width: 1024px) and (max-width: 1151px)";
-@tablet:    ~"only screen and (min-width: 767px) and (max-width: 1024px)";
+@tablet:    ~"only screen and (min-width: 767px) and (max-width: 1023px)";
 @mobile:	~"(max-width: 767px)";
 @formMobile: ~"(max-width: 500px)";
 
@@ -141,16 +141,16 @@ a{
 
 	.ax-header{
 		z-index:300;
-		border-bottom:@border;
-		height:60px;
+		border-top:3px solid #e03e68;
+		height:57px;
 		position: fixed; width:100%;
-		background: @bgcolor;
+		background-image: url(images/header-skin-1.png);
+		background-color: #3E495F;
 		opacity: 0.95;
 
 		.ax-logo{
-
 			position: absolute;
-			margin-top:8px;
+			margin-top:5px;
 			z-index:1;
 			display: block;
 			a{
@@ -165,7 +165,7 @@ a{
 					height:45px;
 					vertical-align: middle;
 					i.axi{
-						color: @color-b;
+						color: #f3f3f3;
 						font-size:35px;
 						line-height: 45px;
 					}
@@ -173,7 +173,7 @@ a{
 				.logo-txt{
 					display: block;float: left;
 					padding:0px 5px;
-					color:@color;
+					color:#9EA6B9;
 					vertical-align: middle;
 					text-decoration: none;
 					font-size:14px;
@@ -185,16 +185,17 @@ a{
 
 		.ax-top-menu{
 			padding-left:200px;
-			height: 60px;width: 600px;
+			height: 57px;width: 600px;
 			ul{
 				list-style: none;
 				margin:0px; padding:0px;
 				li{
 					float:left;
 					font-size:14px;
-					line-height: 60px;
+					line-height: 57px;
 					a{
 						padding:0px 10px;
+						color:#9EA6B9;
 					}
 				}
 			}
@@ -212,9 +213,9 @@ a{
 					position:relative;
 					a{
 						font-weight:bold;
-						&:hover{color:skyblue;}
-						&:focus{color:skyblue;}
-						&.on{color:skyblue;}
+						&:hover{color:#fff;}
+						&:focus{color:#fff;}
+						&.on{color:#fff;}
 					}
 				}
 
@@ -233,8 +234,9 @@ a{
 							background:#fff;
 							border-radius:3px;
 							text-decoration: none;white-space:nowrap;
-							&:hover{background:#eee;}
-							&.on{background:#eee;}
+							color:#444;
+							&:hover{background:#eee;color:#e03e68;}
+							&.on{background:#eee;color:#e03e68;}
 							&.expand{
 								background-image:url(images/rightArrows.png);background-repeat:no-repeat;background-position:100% 0px;padding-right:30px;
 								&:hover{
@@ -256,11 +258,14 @@ a{
 
 
 		.ax-loginfo{
-			height: 60px;
-			line-height: 60px;
+			height: 57px;
+			line-height: 57px;
 			list-style: none;
 			margin:0px; padding:0px;
 			float:right;
+			a {
+				color: #9EA6B9;
+			}
 			li{
 				display: inline;
 				vertical-align: middle;
@@ -276,12 +281,19 @@ a{
 					}
 				}
 				&.account{
-					color:@color-a;
+					color:#9EA6B9;
 					font-weight: bold;
 					padding:0px 10px;
 				}
 				&.lang{
 					padding:0px 20px;
+				}
+				&.btns{
+					a {
+						background: #e03e68;
+						border: 1px solid #e03e68;
+						color:#fff;
+					}
 				}
 			}
 		}
@@ -404,8 +416,9 @@ a{
 		width:260px;left: 0px;top:130px;
 		padding-bottom:50px;
 		z-index:200;
-
+		
 		.ax-aside-menu-box{
+			
 			position: absolute;
 			left: 0px;top:-53px;
 			.ax-aside-menu{
@@ -413,7 +426,7 @@ a{
 				width:36px; height:36px;
 				.util-border-radius(36px,36px,36px,36px);
 				line-height: 36px;
-				background: @bgcolor-c;
+				background: #e03e68;
 				color:@color-d;
 				margin-left:10px;
 				text-align: center;
@@ -432,6 +445,15 @@ a{
 			}
 		}
 		.ax-aside-box{
+			i.axi{
+				display: inline-block;
+				width:22px;height:22px;
+				line-height: 22px;text-align: center;
+				background: #e03e68;
+				color:#fff;
+				border-radius: 50%;
+				margin-right:5px;
+			}
 			.ax-box{
 				width:100%; 
 				background:@bgcolor;
@@ -471,6 +493,8 @@ a{
 					color:@color-a;
 					font-weight: normal;
 					text-align: center;
+					margin:0px;padding:14px 0px;
+					background: #EFEFEF;
 					a{
 						margin:0px 5px;
 						cursor: pointer;
@@ -487,13 +511,14 @@ a{
 					li{
 						border-bottom:@border;
 						a{
+
 							display: block;
 							padding:8px 10px;
-							font-size:13px;
+							font-size: 13px;
 							line-height: 22px;
 							&:hover, &:focus{
-								background: @bgcolor-d;
-								color:@color-d;
+								background: #EFEFEF;
+								color:#e03e68;
 							}
 						}
 					}
@@ -509,7 +534,7 @@ a{
 		height:40px; position: fixed; width: 100%; bottom:0px;
 		line-height: 40px;
 		border-top:@border;
-		background: @bgcolor;
+		background: #EFEFEF;
 		.ax-version{
 			list-style: none;
 			margin:0px; padding:0px;
@@ -1012,7 +1037,7 @@ table.ax-layout{
 	#AXPage{
 		.ax-wrap 	{margin:0px auto;}
 		.ax-clear	{clear:both;}
-		.ax-unit	{margin:0px 3px;}
+		.ax-unit	{margin:0px 0px;}
 		.ax-col		{float:left;}
 		div[class*="ax-col-"] {float:left; height: inherit;}
 		.ax-col-1	{width:100%}
@@ -1054,7 +1079,8 @@ table.ax-layout{
 				float: left;
 				line-height: 60px;
 				padding-left:10px;
-				padding-top:5px;
+				padding-top:3px;
+				//a{color:#9EA6B9;}
 			}
 			.ax-loginfo{
 				display: none;
@@ -1066,12 +1092,13 @@ table.ax-layout{
 			}
 
 			.mx-menu-button{
+				color:#9EA6B9;
 				font-size:30px;
 				&#mx-aside-menu-handle{
 					margin-left:10px;
 				}
 				&:hover,&:focus{
-					color:@color-b;
+					color:#fff;
 				}
 			}
 
@@ -1100,6 +1127,10 @@ table.ax-layout{
 				padding-left:0px;
 			}
 			.ax-box {
+				border-radius: 0px;
+				border:0px none;
+				border-top:3px solid #E7EAEC;
+				border-bottom:1px solid #E7EAEC;
 				/* 페이지 검색바 */
 				.ax-search {
 					border-top:0px solid;
