--- a/theme/Barracks/admin/ui/cacao-dark/admin.css
+++ b/theme/Barracks/admin/ui/cacao-dark/admin.css
@@ -808,6 +808,8 @@ a:hover {
   width: 100px;
   width: 100%;
   height: 40px;
+  line-height: 40px;
+  /* ie8 lte */
   padding: 0px;
   text-indent: 10px;
 }
