--- a/theme/Barracks/admin/ui/cacao-dark/admin.less
+++ b/theme/Barracks/admin/ui/cacao-dark/admin.less
@@ -581,7 +581,7 @@ a{
 				display: block; 
 				padding:4px 20px;
 				.name 	{display: none;}
-				.AXInput	{width:100px; width:100%; height:40px; padding:0px; text-indent: 10px;}
+				.AXInput	{width:100px; width:100%; height:40px; line-height:40px;/* ie8 lte */ padding:0px; text-indent: 10px;}
 			}
 			.ax-funcs{
 				padding:4px 20px;
