--- a/theme/Barracks/admin/ui/cacao/admin.css
+++ b/theme/Barracks/admin/ui/cacao/admin.css
@@ -225,7 +225,7 @@ a:hover {
 			a.logo-icon{
 				color: @color-b;
 				text-decoration: none;
-				font-size:45px;	
+				font-size:45px;
 				i.axi{
 					padding:5px;
 					font-size:35px;
@@ -803,6 +803,8 @@ a:hover {
   width: 100px;
   width: 100%;
   height: 40px;
+  line-height: 40px;
+  /* ie8 lte */
   padding: 0px;
   text-indent: 10px;
 }
