--- a/theme/Barracks/admin/ui/cocker-dark-red/admin.css
+++ b/theme/Barracks/admin/ui/cocker-dark-red/admin.css
@@ -799,6 +799,8 @@ a:hover {
   width: 100px;
   width: 100%;
   height: 40px;
+  line-height: 40px;
+  /* ie8 lte */
   padding: 0px;
   text-indent: 10px;
 }
@@ -806,6 +808,8 @@ a:hover {
   width: 100px;
   width: 100%;
   height: 40px;
+  line-height: 40px;
+  /* ie8 lte */
   padding: 0px;
   text-indent: 10px;
 }
