--- a/theme/Barracks/admin/ui/cocker-dark-red/admin.less
+++ b/theme/Barracks/admin/ui/cocker-dark-red/admin.less
@@ -573,8 +573,8 @@ a{
 				display: block;
 				padding:4px 20px;
 				.name 	{display: none;}
-				.AXInput	{width:100px; width:100%; height:40px; padding:0px; text-indent: 10px;}
-				.AXSelect	{width:100px; width:100%; height:40px; padding:0px; text-indent: 10px;}
+				.AXInput	{width:100px; width:100%; height:40px; line-height:40px;/* ie8 lte */ padding:0px; text-indent: 10px;}
+				.AXSelect	{width:100px; width:100%; height:40px; line-height:40px;/* ie8 lte */ padding:0px; text-indent: 10px;}
 			}
 			.ax-funcs{
 				padding:4px 20px;
