--- a/theme/Barracks/admin/ui/cocker/admin.css
+++ b/theme/Barracks/admin/ui/cocker/admin.css
@@ -772,6 +772,8 @@ a:hover {
   width: 100px;
   width: 100%;
   height: 40px;
+  line-height: 40px;
+  /* ie8 lte */
   padding: 0px;
   text-indent: 10px;
 }
@@ -779,6 +781,8 @@ a:hover {
   width: 100px;
   width: 100%;
   height: 40px;
+  line-height: 40px;
+  /* ie8 lte */
   padding: 0px;
   text-indent: 10px;
 }
