--- a/theme/Barracks/admin/ui/custom.less
+++ b/theme/Barracks/admin/ui/custom.less
@@ -1,56 +1,75 @@
-.nowrap{
-	white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
+.nowrap {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.AXGridTable{
-	td{
-		padding: 5px;
-		line-height: 20px;
-		.nowrap();
-	}
+.AXGridTable {
+    td {
+        padding: 5px;
+        line-height: 20px;
+        .nowrap();
+    }
 }
-.AXFormTable{
-	td{
-		padding: 5px;
-		line-height: 20px;
-		//.nowrap();
-	}
+
+.AXFormTable {
+    td {
+        padding: 5px;
+        line-height: 20px;
+        //.nowrap();
+    }
 }
-.AXInputLabel{
-	span{line-height:1.5em;}
+
+.AXInputLabel {
+    span {
+        line-height: 1.5em;
+    }
 }
 
 #AXPage {
-	&.login {
-		.ax-title {
-			height: 80px;
-			overflow: hidden;
-			padding: 20px;
-			h1 {
-				display: block;
-				height: 50px;
-				line-height: 50px;
-				float: none;
-				font-size: 24px;
-				font-weight: normal;
-				text-align: center;
-				margin: 0px;
-				padding: 0px;
-				i.axi{
-					font-size: 50px;
-					//color: #468cca;
-				}
-			}
-			.desc {
-				display: block;
-				height: 30px;
-				line-height: 30px;
-				float: none;
-				text-align: center;
-				margin: 0px 0px 0px 10px;
-				padding: 0px;
-				color: #888;
-			}
-		}
-	}
+    &.login {
+        .ax-title {
+            height: 80px;
+            overflow: hidden;
+            padding: 20px;
+            h1 {
+                display: block;
+                height: 50px;
+                line-height: 50px;
+                float: none;
+                font-size: 24px;
+                font-weight: normal;
+                text-align: center;
+                margin: 0px;
+                padding: 0px;
+                i.axi {
+                    font-size: 50px;
+                    //color: #468cca;
+                }
+            }
+            .desc {
+                display: block;
+                height: 30px;
+                line-height: 30px;
+                float: none;
+                text-align: center;
+                margin: 0px 0px 0px 10px;
+                padding: 0px;
+                color: #888;
+            }
+        }
+    }
+}
+
+//== 2016-04-01 sidemenu class 추가
+.ax-aside{
+    .ax-aside-box{
+        .ax-aside-ul{
+            li a{
+                &.active{
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
 }
